manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beer-api
  namespace: sabino-labs
  labels:
    app: beer-api
    component: beer-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: beer-api
      component: beer-api
  template:
    metadata:
      labels:
        app: beer-api
        component: beer-api
    spec:
      restartPolicy: Always
      containers:
        - name: beer-api
          image: sabinolabs/beer-api:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 400m
              memory: 700Mi
            requests:
              cpu: 300m
              memory: 500Mi
          ports:
            - name: beer-api
              containerPort: 8001
              protocol: TCP
          command: [ "/bin/sh","-c" ]
          args: [ "./run.sh" ]
