manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beer-api-ingress
  namespace: sabino-labs
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.org/client-max-body-size: "50m"
    nginx.org/server-snippets: "gzip on;"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "86400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: traefik
  rules:
    - host: "beer-api.sabino.labs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beer-api
                port:
                  number: 8001
